--- a/war/src/main/webapp/style/style.css
+++ b/war/src/main/webapp/style/style.css
@@ -1,23 +1,63 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+}
+
+header h1 a {
+    text-decoration: none;
+    color: #000;
+}
+
+div.headerLeft {
+    float: left;
+    width: 50%;
+}
+
+div.headerRight {
+    float: right;
+    width: 50%;
+    text-align: right;
+}
+
+.clear {
+    clear: both;
 }
 
 .error {
     padding: 15px;
     margin-bottom: 20px;
-    border: 1px solid transparent;
+    border: 1px solid #ebccd1;
     border-radius: 4px;
     color: #a94442;
     background-color: #f2dede;
-    border-color: #ebccd1;
 }
 
 #login-box {
-    width: 300px;
+    width: 250px;
     padding: 20px;
     margin: 100px auto;
     background: #fff;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
+    border-radius: 2px;
     border: 1px solid #000;
+}
+
+table.list {
+    border-collapse: collapse;
+    border: 1px solid #000;
+}
+
+table.list tr {
+    border: 1px dotted #CCC;
+}
+
+table td, table th {
+    padding: 3px;
+    text-align: left;
+    vertical-align: top;
+    font-size: small;
+}
+
+table.list th {
+    background-color: #000;
+    color: #FFF;
 }
