--- a/war/src/main/webapp/style/style.css
+++ b/war/src/main/webapp/style/style.css
@@ -1,22 +1,33 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
+    margin: 0;
+    padding: 0;
 }
 
-header h1 a {
+header {
+    background-color: #550000;
+    color: #FFF;
+    padding: 5px 20px;
+}
+
+.content {
+    margin: 5px 20px;
+}
+
+header a {
+    color: #FFF;
     text-decoration: none;
-    color: #000;
+    font-weight: bold;
 }
 
 div.headerLeft {
     float: left;
-    width: 50%;
 }
 
 div.headerRight {
     float: right;
-    width: 50%;
-    text-align: right;
+    padding-top: 15px;
 }
 
 .clear {
@@ -39,6 +50,10 @@ div.headerRight {
     background: #fff;
     border-radius: 2px;
     border: 1px solid #000;
+}
+
+a {
+    color: #550000;
 }
 
 table.list {
