--- a/war/src/main/webapp/style/style.css
+++ b/war/src/main/webapp/style/style.css
@@ -30,6 +30,17 @@ div.headerRight {
     padding-top: 15px;
 }
 
+div#key {
+    border: 1px solid #000;
+    padding: 20px;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+div#key pre {
+    font-size: medium;
+}
+
 .clear {
     clear: both;
 }
@@ -66,7 +77,7 @@ table.list tr {
 }
 
 table td, table th {
-    padding: 3px;
+    padding: 3px 5px;
     text-align: left;
     vertical-align: top;
     font-size: small;
@@ -75,4 +86,5 @@ table td, table th {
 table.list th {
     background-color: #000;
     color: #FFF;
+    border: 1px solid #000;
 }
