--- a/war/src/main/webapp/style/style.css
+++ b/war/src/main/webapp/style/style.css
@@ -38,10 +38,8 @@ div#key {
     width: 45em;
 }
 
-div#key p {
-    font-family: monospace;
+div#key pre {
     font-size: medium;
-    word-wrap: break-word;
 }
 
 .clear {
